# cgull

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  rocket2bin.py  sync.xml
.github/workflows/: cmake.yml
src/: Constants.h  EmbeddedShader.h  FileWatcher.h  Rocket.h  Scene.h  ShaderWrapper.h  TimeSource.h  main.cpp
src/scenes/: City.fs  City.h  Ridges.fs  Ridges.h
